# trabalho-engenharia-de-software-2026

./: INSTRUCOES.md  README.md  app.py  create_admin.py  index.html  ouvidoria.db  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  vite.config.js
config/: settings.py
database/: connection.py  migrations.py
docs/: arquitetura.md  pendencias.md  rastreabilidade.md
models/: schemas.py
repositories/: anexo_repo.py  historico_repo.py  manifestacao_repo.py  usuario_repo.py  validacao_repo.py
services/: anexo_service.py  auth_service.py  email_service.py  manifestacao_service.py  protocolo_service.py
src/: main.js  styles.css
tests/: test_anexos.py  test_auth.py  test_manifestacao.py  test_protocolo.py  test_validators.py
ui/admin/: __init__.py  admin_usuarios.py  dashboard.py  detalhe.py  login.py  relatorios.py
ui/cidadao/: __init__.py  abertura.py  consulta.py  home.py
utils/: helpers.py  validators.py
